--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
               <footer class="footer section">
                   <div class="footer__container bd-grid">
                     <h1 class="footer__title">Kunal</h1>
-                    <p class="footer__description">I an Kunal and this is my personal website, consult me here.</p>
+                    <p class="footer__description">I am Kunal and this is my personal website, consult me here.</p>
 
                     <div class="footer__social">
                         <a href="https://www.facebook.com/kunal.karmali.9" class="footer__link" target="_blank"><i class="bx bxl-facebook"></i></a>
