--- a/index.html
+++ b/index.html
@@ -301,9 +301,9 @@
                         <img src="assets/img/work4.jpg" alt="">
 
                         <div class="works__data">
-                            <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
-                            <span class="works__title">Work 4</span>
-                            <span class="works__subtitle">React Chat app</span>
+                            <a href="https://chat-app-knight.netlify.app" class="works__link"><i class="bx bx-link-alt"></i></a>
+                            <a href="https://chat-app-knight.netlify.app"><span class="works__title">Work 4</span></a>
+                            <a href="https://chat-app-knight.netlify.app"><span class="works__subtitle">React Chat app</span></a>
                         </div>
                     </div>
 
