--- a/index.html
+++ b/index.html
@@ -311,9 +311,9 @@
                         <img src="assets/img/work5.jpg" alt="">
 
                         <div class="works__data">
-                            <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
-                            <span class="works__title">Work 5</span>
-                            <span class="works__subtitle">Parallax scrolling website</span>
+                            <a href="https://parallax-scrolling-effect1998.netlify.app" class="works__link"><i class="bx bx-link-alt"></i></a>
+                            <a href="https://parallax-scrolling-effect1998.netlify.app"><span class="works__title">Work 5</span></a>
+                            <a href="https://parallax-scrolling-effect1998.netlify.app"><span class="works__subtitle">Parallax scrolling website</span></a>
                         </div>
                     </div>
 
