--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@
                           <img src="assets/img/work1.jpg" alt="">
 
                           <div class="works__data">
-                              <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
-                              <span class="works__title">Work 1</span>
-                              <span class="works__subtitle">React To-Do app</span>
+                              <a href="https://react-to-do-app1998.netlify.app" class="works__link"><i class="bx bx-link-alt"></i></a>
+                              <a href="https://react-to-do-app1998.netlify.app"><span class="works__title">Work 1</span></a>
+                              <a href="https://react-to-do-app1998.netlify.app"><span class="works__subtitle">React To-Do app</span></a>
                           </div>
                       </div>
 
