--- a/index.html
+++ b/index.html
@@ -281,9 +281,9 @@
                         <img src="assets/img/work2.jpg" alt="">
 
                         <div class="works__data">
-                            <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
-                            <span class="works__title">Work 2</span>
-                            <span class="works__subtitle">React Quiz app</span>
+                            <a href="https://react-quiz-app1998.netlify.app" class="works__link"><i class="bx bx-link-alt"></i></a>
+                            <a href="https://react-quiz-app1998.netlify.app"><span class="works__title">Work 2</span></a>
+                            < href="https://react-quiz-app1998.netlify.app"><span class="works__subtitle">React Quiz app</span></a>
                         </div>
                     </div>
 
