--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                         <div class="works__data">
                             <a href="https://react-quiz-app1998.netlify.app" class="works__link"><i class="bx bx-link-alt"></i></a>
                             <a href="https://react-quiz-app1998.netlify.app"><span class="works__title">Work 2</span></a>
-                            < href="https://react-quiz-app1998.netlify.app"><span class="works__subtitle">React Quiz app</span></a>
+                            <a href="https://react-quiz-app1998.netlify.app"><span class="works__subtitle">React Quiz app</span></a>
                         </div>
                     </div>
 
