--- a/index.html
+++ b/index.html
@@ -291,9 +291,9 @@
                         <img src="assets/img/work3.jpg" alt="">
 
                         <div class="works__data">
-                            <a href="#" class="works__link"><i class="bx bx-link-alt"></i></a>
-                            <span class="works__title">Work 3</span>
-                            <span class="works__subtitle">React Recipe app</span>
+                            <a href="https://react-recipe-app1998.netlify.app" class="works__link"><i class="bx bx-link-alt"></i></a>
+                            <a href="https://react-recipe-app1998.netlify.app"><span class="works__title">Work 3</span></a>
+                            <a href="https://react-recipe-app1998.netlify.app"><span class="works__subtitle">React Recipe app</span></a>
                         </div>
                     </div>
 
